--- a/views/extra_field.xml
+++ b/views/extra_field.xml
@@ -1,24 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-   <record id="view_sale_extra_field_config_form" model="ir.ui.view">
-    <field name="name">sale.extra.field.config.form</field>
-    <field name="model">sale.extra.field.config</field>
-    <field name="arch" type="xml">
-        <form>
-            <sheet>
-                <group>
-                    <field name="name"/>
-                    <field name="field_type"/>
-                    <field name="default_label"/>
-                    <field name="custom_label"/>
-                    <field name="visible"/>
-                    <field name="required"/>
-                    <field name="selection_values"/>
-                </group>
-            </sheet>
-        </form>
-    </field>
-</record>
+    <record id="view_sale_extra_field_config_form" model="ir.ui.view">
+        <field name="name">sale.extra.field.config.form</field>
+        <field name="model">sale.extra.field.config</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="name"/>
+                        <field name="field_type"/>
+                        <field name="default_label"/>
+                        <field name="custom_label"/>
+                        <field name="visible"/>
+                        <field name="required"/>
+                        <field name="selection_values"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+     <record id="view_sale_extra_field_config_tree" model="ir.ui.view">
+        <field name="name">sale.extra.field.config.tree</field>
+        <field name="model">sale.extra.field.config</field>
+        <field name="arch" type="xml">
+            <tree>
+                <field name="name"/>
+                <field name="field_type"/>
+                <field name="default_label"/>
+                <field name="custom_label"/>
+                <field name="visible"/>
+                <field name="required"/>
+                <field name="selection_values"/>
+            </tree>
+        </field>
+    </record>
+
+    
+    <record id="action_view_sale_extra_field_config" model="ir.actions.act_window">
+            <field name="name">Extra Fields</field>
+            <field name="res_model">sale.extra.field.config</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_id" ref="view_sale_extra_field_config_tree"/>
+            <field name="target">current</field>
+            <field name="help" type="html">
+                <p class="oe_view_nocontent_create">Click to create new  
+                </p>
+            </field>
+          </record>
+
+
+ 
+     <menuitem id="extra_fields_menu" name="Extra Fields" parent="base.menu_users"
+                  action="action_view_sale_extra_field_config" />
+
+
+
 
 
 </odoo>
