--- a/views/account_move.xml
+++ b/views/account_move.xml
@@ -5,29 +5,16 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//notebook" position="inside">
-                <page string="Extra Fields" name="extra_fields_tab">
-                    <group>
-                        <t t-foreach="env['sale.extra.field.config'].search([('visible','=',True)])" t-as="ef">
-                            <t t-if="ef.field_type == 'char'">
-                                <field name="ef.name" string="t-esc='ef.custom_label or ef.default_label'"/>
-                            </t>
-                            <t t-if="ef.field_type == 'float'">
-                                <field name="ef.name" string="t-esc='ef.custom_label or ef.default_label'"/>
-                            </t>
-                            <t t-if="ef.field_type == 'boolean'">
-                                <field name="ef.name" string="t-esc='ef.custom_label or ef.default_label'"/>
-                            </t>
-                            <t t-if="ef.field_type == 'date'">
-                                <field name="ef.name" string="t-esc='ef.custom_label or ef.default_label'"/>
-                            </t>
-                            <t t-if="ef.field_type == 'selection'">
-                                <field name="ef.name" string="t-esc='ef.custom_label or ef.default_label'"/>
-                            </t>
-                        </t>
-                    </group>
-                </page>
-            </xpath>
+           <xpath expr="//notebook" position="inside">
+				<page string="Extra Fields" name="extra_fields_tab">
+					<group>
+						<field name="x_extra_text_1"/>
+						<field name="x_extra_text_2"/>
+						<field name="x_extra_number_1"/>
+						<field name="x_extra_date_1"/>
+					</group>
+				</page>
+			</xpath>
         </field>
     </record>
 
