--- a/views/sale_order.xml
+++ b/views/sale_order.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
-                <page string="Extra Fields" name="extra_fields_tab">
+                <page string="الحقول الاضافية" name="extra_fields_tab">
                     <group>
                         <!-- Helpers invisible for visible/required flags -->
                         <field name="x_extra_text_1_visible" invisible="1"/>
@@ -52,14 +52,21 @@
                         <field name="x_extra_boolean_3_required" invisible="1"/>
                         <field name="x_extra_boolean_4_required" invisible="1"/>
                         <field name="x_extra_boolean_5_required" invisible="1"/>
+						<group>
+							<field name="x_extra_text_1" attrs="{'invisible':[('x_extra_text_1_visible','=',False)],'required':[('x_extra_text_1_required','=',True)]}"/>
+							<field name="x_extra_text_2" attrs="{'invisible':[('x_extra_text_2_visible','=',False)],'required':[('x_extra_text_2_required','=',True)]}"/>
+							<field name="x_extra_text_3" attrs="{'invisible':[('x_extra_text_3_visible','=',False)],'required':[('x_extra_text_3_required','=',True)]}"/>
+							<field name="x_extra_text_4" attrs="{'invisible':[('x_extra_text_4_visible','=',False)],'required':[('x_extra_text_4_required','=',True)]}"/>
+							<field name="x_extra_text_5" attrs="{'invisible':[('x_extra_text_5_visible','=',False)],'required':[('x_extra_text_5_required','=',True)]}"/>
 
+
+						</group>
+						<group>
+
+
+						</group>
                         <!-- TEXT -->
-                        <field name="x_extra_text_1" attrs="{'invisible':[('x_extra_text_1_visible','=',False)],'required':[('x_extra_text_1_required','=',True)]}"/>
-                        <field name="x_extra_text_2" attrs="{'invisible':[('x_extra_text_2_visible','=',False)],'required':[('x_extra_text_2_required','=',True)]}"/>
-                        <field name="x_extra_text_3" attrs="{'invisible':[('x_extra_text_3_visible','=',False)],'required':[('x_extra_text_3_required','=',True)]}"/>
-                        <field name="x_extra_text_4" attrs="{'invisible':[('x_extra_text_4_visible','=',False)],'required':[('x_extra_text_4_required','=',True)]}"/>
-                        <field name="x_extra_text_5" attrs="{'invisible':[('x_extra_text_5_visible','=',False)],'required':[('x_extra_text_5_required','=',True)]}"/>
-
+                      
                         <!-- NUMBER -->
                         <field name="x_extra_number_1" attrs="{'invisible':[('x_extra_number_1_visible','=',False)],'required':[('x_extra_number_1_required','=',True)]}"/>
                         <field name="x_extra_number_2" attrs="{'invisible':[('x_extra_number_2_visible','=',False)],'required':[('x_extra_number_2_required','=',True)]}"/>
